[package]
name = "wayfinder"
version = "0.1.0"
edition = "2021"
authors = ["Coombszy <LCCoombs@hotmail.co.uk>"]

[dependencies]
tokio =  { version = "1.25.0", features = ["full"] }
thiserror = "1.0.38"
wayfinder-shared = {path = "libs/wayfinder-shared"}
wayfinder-godaddy = {path = "libs/wayfinder-godaddy"}
log = "0.4.17"
simplelog = "0.12.0"
