[package]
name = "wayfinder-godaddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["json"]}
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.92"
simplelog = "0.12.0"
thiserror = "1.0.38"
tokio = "1.25.0"
wayfinder-shared = {path = "../wayfinder-shared"}
