[package]
name = "wayfinder-godaddy"
description = "Wayfinder dependency for Godaddy integration"
version = "0.1.0"
edition = "2021"
authors = ["Coombszy <LCCoombs@hotmail.co.uk>"]
repository = "https://github.com/Coombszy/wayfinder/tree/main/libs/wayfinder-godaddy"
license = "MIT"

[dependencies]
clap = { version = "4.1.4", features = ["derive", "env"] }
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["json"]}
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.92"
simplelog = "0.12.0"
thiserror = "1.0.38"
tokio = "1.25.0"
wayfinder-shared = "0.1.0"
