[package]
name = "wayfinder-shared"
description = "Wayfinder shared"
version = "0.1.0"
edition = "2021"
authors = ["Coombszy <LCCoombs@hotmail.co.uk>"]
repository = "https://github.com/Coombszy/wayfinder/tree/main/libs/wayfinder-shared"
license = "MIT"

[dependencies]
log = "0.4.17"
thiserror = "1.0.38"
reqwest = { version = "0.11.14", features = ["json"]}
serde = { version = "1.0.152", features = ["derive"]}
